fixed bug of styling Navbar and it overlapping buttons

--- a/src/css/Map.css
+++ b/src/css/Map.css
@@ -1,5 +1,6 @@
 #root{
   background-color: var(--blue-600);
+  height:100vh
 }
 
 /* Style the buttons at the top */
@@ -17,6 +18,8 @@ button {
   border-radius: 25px;
   transition: all 0.3s ease-in-out;
 }
+
+
 
 
 
